--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,7 +3,7 @@ Hi, I am Khalid. I like Software Programming.
 Currently I am pursuing masters in Computer Science at [Georgia Tech](https://www.gatech.edu/).
 
 Previously I worked as a Senior SDE at [BrowserStack](https://www.browserstack.com/) 
-and interestingly I have also worked as an SDE at [Swift Robotics](https://swiftrobotics.ai/) building disinfection robots for SARS-CoV-2
+and I have also worked as an SDE at [Swift Robotics](https://swiftrobotics.ai/) building disinfection robots for SARS-CoV-2
 
 I enjoy watching Podcasts and  educational content on Youtube.
 
