updated favicons and changed the main content page

--- a/src/content/projects/percy-chrome-plugin/index.mdx
+++ b/src/content/projects/percy-chrome-plugin/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Percy Chrome Extension"
-lede: "A Chrome extension to perform manual/semi-automated visual testing using Percy plaform"
+lede: "A Chrome extension to perform manual/semi-automated visual testing using Percy plaform."
 date: "2023"
 link: "https://github.com/BrowserStackCE/percy-chrome-extension"
 repo: "https://github.com/BrowserStackCE/percy-chrome-extension"
