--- a/src/content/projects/yoru-tourism-chatbot/index.mdx
+++ b/src/content/projects/yoru-tourism-chatbot/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Yoru - tourism chatbot"
-lede: "This was the winning solution to Cisco DevNet’s cruise tourism problem statement proposed in SIH 2020. The chatbot is built using the Conversational AI platform MindMeld. It offers navigation and access to cruise services with an Admin dashboard"
+lede: "This was the winning solution to Cisco DevNet’s cruise tourism problem statement proposed in SIH 2020. The chatbot is built using the Conversational AI platform MindMeld."
 date: "2020"
 link: "https://github.com/BrowserStackCE/percy-pdf"
 repo: "https://github.com/BrowserStackCE/percy-pdf"
