--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,10 +3,12 @@ Hi, I am Khalid. I like Software Programming.
 Currently I am pursuing masters in Computer Science at [Georgia Tech](https://www.gatech.edu/).
 
 Previously I worked as a Senior SDE at [BrowserStack](https://www.browserstack.com/) 
-and I have also worked as an SDE at [Swift Robotics](https://swiftrobotics.ai/) building disinfection robots for SARS-CoV-2
+and I have also worked as an SDE at [Swift Robotics](https://swiftrobotics.ai/) building disinfection robots for SARS-CoV-2.
 
 I enjoy watching Podcasts and  educational content on Youtube.
 
-My Current Favs : Podcast - [WTF is? by Nikhil Kamath](https://youtube.com/playlist?list=PLVPkbpccdn98Mb43hFbfxXHRLQxAS4tyU) : Youtube channel - [Nerdwriter1](https://www.youtube.com/@Nerdwriter1)
+My Current Favs : Podcast - [WTF is? by Nikhil Kamath](https://youtube.com/playlist?list=PLVPkbpccdn98Mb43hFbfxXHRLQxAS4tyU) : Youtube channel - [Nerdwriter1](https://www.youtube.com/@Nerdwriter1).
 
 You can find me on [LinkedIn](https://www.linkedin.com/in/shaikhalid/), and [Github](https://github.com/shaikhalid), or reach me via [email](mailto:shaikhalidwork@gmail.com).
+
+&darr; [my resume](https://drive.google.com/file/d/1FGIFN9rONe2_RB2Uw_y_EpHNZOdGFSoc/view?usp=drive_link).
