--- a/src/content/projects/percy-pdf/index.mdx
+++ b/src/content/projects/percy-pdf/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Percy PDF"
-lede: "Visual Testing for PDF documents using Percy platform"
+lede: "Visual Testing for PDF documents using Percy platform."
 date: "2023"
 link: "https://github.com/BrowserStackCE/percy-pdf"
 repo: "https://github.com/BrowserStackCE/percy-pdf"
