--- a/src/content/edu/georgia-tech/index.mdx
+++ b/src/content/edu/georgia-tech/index.mdx
@@ -8,3 +8,29 @@ start_date: '2023-08-21'
 end_date: '2025-06-30'
 ---
 
+## Semester 2
+
+### Courses:
+1. **Efficient Machine Learning**
+2. **Computer Vision**
+3. **Teaching Assistant for CS3630 Intro to Robotics and Perception**
+
+### Research Work:
+#### Gatech EIC Lab:
+- Developing and refining a novel method for augmenting attention weights in Large Language Models (LLMs), aimed at improving their performance and accuracy.
+
+---
+
+## Semester 1
+
+### Courses:
+1. **Machine Learning**
+2. **Software Analysis and Compiler Design**
+3. **Explainable AI**
+
+### Research Work:
+#### RAIL Lab:
+- Implemented a multi-cluster, multi-region solution for managing Time Series DB through the use of Victoria Metrics, which led to an annual cost reduction of $10k by replacing the InfluxDB and Prometheus setup.
+   
+- Developed an ELT pipeline using PySpark and GCP tools to facilitate customer data analysis with Random Forest. This initiative led to a 70% increase in actionable insights for enhancing product experience.
+
