--- a/src/content/edu/georgia-tech/index.mdx
+++ b/src/content/edu/georgia-tech/index.mdx
@@ -34,3 +34,9 @@ end_date: '2025-06-30'
    
 - Developed an ELT pipeline using PySpark and GCP tools to facilitate customer data analysis with Random Forest. This initiative led to a 70% increase in actionable insights for enhancing product experience.
 
+
+### Life at Gatech
+
+#### RAIL Lab team
+![Image](https://shaikhalid.github.io/rail-lab-team.jpeg)
+
