--- a/src/content/projects/yoru-tourism-chatbot/index.mdx
+++ b/src/content/projects/yoru-tourism-chatbot/index.mdx
@@ -2,8 +2,8 @@
 title: "Yoru - tourism chatbot"
 lede: "This was the winning solution to Cisco DevNet’s cruise tourism problem statement proposed in SIH 2020. The chatbot is built using the Conversational AI platform MindMeld."
 date: "2020"
-link: "https://github.com/BrowserStackCE/percy-pdf"
-repo: "https://github.com/BrowserStackCE/percy-pdf"
+link: "https://www.linkedin.com/posts/shaikhalid_sih2020-ciscoabrdevnet-mindmeld-activity-6708618933584347136-5-x6?utm_source=share&utm_medium=member_desktop"
+repo: "https://github.com/txtr/yoru"
 publish: true
 lang: "JavaScript"
 ---
