--- a/src/content/workex/swiftrobotics/index.mdx
+++ b/src/content/workex/swiftrobotics/index.mdx
@@ -9,4 +9,6 @@ type: workex
 ---
 
 
-Conducted research and implemented Simultaneous Localization and Mapping (SLAM) algorithms for autonomous UVC disinfection robots. Developed a full navigation stack, human-detection system, and mobile application's REST API framework for commanding robots, enabling successful robot deployment at Sir H.N. Reliance Hospital.
+- **Implemented ORB-SLAM2 for COVID-19 disinfection robots**, achieving precise navigation in complex settings.
+- **Performed Sensor Fusion** on Wheel + Visual Odometry and IMU Data, resulting in a **60% reduction in localization error** to an average of 7cm after 30 mins of operation in real-world scenarios.
+- **Developed a React Native app** to control and visualize the robot using the Animated API and implemented state management through Redux.
