--- a/src/content/workex/browserstack/index.mdx
+++ b/src/content/workex/browserstack/index.mdx
@@ -6,4 +6,25 @@ end_date: '2023-08-09'
 publish: true
 ---
 
-Consulted with 80+ customers to build technical solutions for unique use cases, delivered technical seminars, and became an expert in BrowserStack products and testing frameworks. Collaborated extensively with teams to solve tickets, contribute to sample repositories, and optimize product integration for Tricentis Tosca.
+**Utilized data analytics and machine learning to improve customer experiences and engagement strategies.** My projects included:
+- Developing a model to personalize suggestions to improve product adoption.
+- Segmenting customers for targeted strategies.
+- Creating an automated system that reduced manual feedback analysis by 70%.
+
+**Developed workflows to extract key insights related to product usage and adoption** based on which we generated customized recommendations and tips to customers to improve the user experience. Contributed to 10+ open source repositories showcasing framework integration and feature usage. Enhanced BrowserStack’s Turboscale grid architecture to support desktop automation testing with Tricentis Tosca.
+
+**Skills learned:**
+- React.js
+- Machine Learning
+- Debugging
+- API Development
+- PyTorch
+- Google Cloud Platform (GCP)
+- SQL
+- Microsoft Azure
+- Project Management
+- Large Language Models (LLM)
+- PySpark
+- Communication
+- Data Science
+
