--- a/src/content/edu/georgia-tech/index.mdx
+++ b/src/content/edu/georgia-tech/index.mdx
@@ -40,3 +40,6 @@ end_date: '2025-06-30'
 #### RAIL Lab team
 ![Image](https://shaikhalid.github.io/rail-lab-team.jpeg)
 
+
+#### Halloween - giving out chocolates using robots
+![Image](https://shaikhalid.github.io/halloween-robots.jpeg)
