--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -11,4 +11,4 @@ My Current Favs : Podcast - [WTF is? by Nikhil Kamath](https://youtube.com/playl
 
 You can find me on [LinkedIn](https://www.linkedin.com/in/shaikhalid/), and [Github](https://github.com/shaikhalid), or reach me via [email](mailto:shaikhalidwork@gmail.com).
 
-&darr; [my resume](https://drive.google.com/file/d/1FGIFN9rONe2_RB2Uw_y_EpHNZOdGFSoc/view?usp=drive_link).
+&darr; [my resume](https://drive.google.com/file/d/1zR5Fu6HS32W2iT_ix2Zo5sBRQSZWet1Q/view?usp=sharing).
