--- a/src/content/workex/browserstack/index.mdx
+++ b/src/content/workex/browserstack/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Senior Software Development Engineer - Customer Engineering"
+title: "Senior Software Development Engineer"
 company: "BrowserStack"
 start_date: '2021-06-21'
 end_date: '2023-08-09'
