--- a/src/content/workex/swiftrobotics/index.mdx
+++ b/src/content/workex/swiftrobotics/index.mdx
@@ -12,3 +12,19 @@ type: workex
 - **Implemented ORB-SLAM2 for COVID-19 disinfection robots**, achieving precise navigation in complex settings.
 - **Performed Sensor Fusion** on Wheel + Visual Odometry and IMU Data, resulting in a **60% reduction in localization error** to an average of 7cm after 30 mins of operation in real-world scenarios.
 - **Developed a React Native app** to control and visualize the robot using the Animated API and implemented state management through Redux.
+
+**Skills learned:**
+- React.js
+- Robot Operating System (ROS)
+- Machine Learning
+- Robotics
+- Autonomous Navigation
+- PyTorch
+- Image Processing
+- Computer Vision
+- OpenCV
+- SLAM
+- Sensor Fusion
+- Android Development
+- Distributed Systems
+- MATLAB
